--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -8,6 +8,7 @@
         "manage_roles": false,
         "profile_name": "serverless",
         "project_name": "tr-have-i-been-pwned-relay",
+        "role_name": "tr-serverless-relay-ZappaLambdaExecutionRole",
         "runtime": "python3.7",
         "s3_bucket": "zappa-tr-have-i-been-pwned-relay"
     }
