--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Authlib==0.14.1
-Flask==1.1.1
+Authlib==0.14.3
+Flask==1.1.2
 markdownify==0.4.1
-marshmallow==3.5.1
-requests==2.23.0
+marshmallow==3.6.1
+requests==2.24.0
+zappa==0.51.0
