--- a/code/requirements.txt
+++ b/code/requirements.txt
@@ -3,6 +3,7 @@ markdownify==0.5.1
 marshmallow==3.7.1
 requests==2.24.0
 zappa==0.51.0
+cryptography==3.3.2
 pyjwt[crypto]==2.0.0
 flake8==3.8.3
 coverage==5.2.1
